vfpl_parser/src/snapshots/vfpl__parse__test__add_number.snap
---
source: src/parse/test.rs
expression: parsed

---
Ok(
    ArithmeticOp(
        ArithmeticOp {
            span: Span {
                start: 0,
                end: 0,
            },
            lhs: Literal(
                Literal {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    kind: Int(
                        0,
                    ),
                },
            ),
            rhs: Literal(
                Literal {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    kind: Ident(
                        "counter",
                    ),
                },
            ),
            kind: Add,
        },
    ),
)
