vfpl_parser/src/snapshots/vfpl__parse__test__add_stmt.snap
---
source: src/parse/test.rs
expression: parsed

---
Ok(
    Expr(
        ArithmeticOp(
            ArithmeticOp {
                span: Span {
                    start: 0,
                    end: 0,
                },
                lhs: Literal(
                    Literal {
                        span: Span {
                            start: 0,
                            end: 0,
                        },
                        kind: Int(
                            0,
                        ),
                    },
                ),
                rhs: Literal(
                    Literal {
                        span: Span {
                            start: 0,
                            end: 0,
                        },
                        kind: Ident(
                            "A",
                        ),
                    },
                ),
                kind: Add,
            },
        ),
    ),
)
