vfpl_parser/src/snapshots/vfpl__parse__test__call_two_args.snap
---
source: src/parse/test.rs
expression: parsed

---
Ok(
    Call {
        span: Span {
            start: 0,
            end: 0,
        },
        fn_name: "add",
        args: CallArgs {
            span: Span {
                start: 0,
                end: 0,
            },
            args: [
                CallArg {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    expr: Literal(
                        Literal {
                            span: Span {
                                start: 0,
                                end: 0,
                            },
                            kind: Int(
                                2,
                            ),
                        },
                    ),
                    name: "a",
                },
                CallArg {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    expr: Literal(
                        Literal {
                            span: Span {
                                start: 0,
                                end: 0,
                            },
                            kind: Int(
                                3,
                            ),
                        },
                    ),
                    name: "b",
                },
            ],
        },
    },
)
